# core

./: .env.example  Dockerfile  README.md  docker-compose.yml  fly.toml  pyproject.toml  requirements.txt  todo.md
alembic/: env.py
alembic/versions/: 324abe103cd7_fix_profile_mismatching_in_track.py  3700d54a4309_create_database.py  3eb0f63e0ca3_create_tables.py  71d8f7b09521_add_audio_processing_features.py  8d10b3b46820_create_feedbacks_scenarios_and_.py  af80fd9f5887_fix_profile_submission_relationship.py  be6745fe5ae0_update_feedback_model_for_structured_.py  d6b7ac8ebaed_initial_tables.py
app/: config.py  instrumentation.py  main.py
app/api/v1/endpoints/: feedback.py  feedbacks.py  learning_paths.py  methods.py  scenario.py  scenarios.py  status.py  submission.py  submissions.py  tracks.py  users.py
app/core/: auth.py  clerk.py  config.py  database.py  security.py
app/dependencies/: auth.py
app/models/: audio_features.py  feedback.py  learning_path.py  method.py  profile.py  scenario.py  section.py  submission.py  track.py  user.py
app/routes/: audio.py
app/schemas/: audio.py  feedback.py  followup.py  guideline.py  learning_path.py  method.py  scenario.py  submission.py  track.py  user.py
app/services/: audio_analysis.py  audio_processor.py  feedback_generator.py  followup_generator.py  guideline_generator.py  llm_service.py
app/utils/: audio_processor.py
