[tool.poetry]
name = "core"
version = "0.1.0"
description = ""
authors = ["Gabriel W. Bartmanovicz <obielwb@gmail.com>"]
readme = "README.md"
packages = [{ include = "core", from = "src" }]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = { extras = ["standard"], version = ">=0.116.1,<0.117.0" }
uvicorn = {extras = ["standard"], version = "^0.35.0"}

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
